--- a/css/style.css
+++ b/css/style.css
@@ -156,18 +156,7 @@ label:not(:first-of-type) {
 }
 input:not(:checked) + label:hover {
     cursor:pointer;
-    background:white;
-    color:white;
-    text-shadow:
-        0px -2px 24px #F16342,
-        2px -2px 24px #F16342, 
-        2px 0px 24px #F16342, 
-        2px 2px 24px #F16342, 
-        0px 2px 24px #F16342, 
-        -2px 2px 24px #F16322, 
-        -2px 0px 24px #F16322, 
-        -2px -2px 24px #F16342;
-        
+    font-weight:bold;
 } 
 label {
     margin:10px 10px;
