--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,13 @@ h4 {
 h1 {
     font-size:34px;
     letter-spacing: 5.5px;
-    line-height:30px;
+    line-height:40px;
     color:#3D3B68;
     margin:0 auto;
 }
 h2 {
     font-size:24px;
     letter-spacing:4px;
-    line-height:20px;
     color:#5FBAF4;
     margin:30px auto 30px auto;
 }
@@ -63,7 +62,7 @@ section > h1, span.lede, label {
     letter-spacing:3px;
     color:#9B9B9B;
 }
-section > h1 {
+h2, section > h1 {
     line-height:30px;
 }
 label {
