--- a/css/plan.css
+++ b/css/plan.css
@@ -178,7 +178,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     section > article { width:calc(33.33% - 60px); }
-    section > article:not(:last-of-type) { margin-right:30px; }
+    section > article:not(:nth-of-type(3n)) { margin-right:30px; }
     section.list > section p { max-width:620px; }
     section > article hr { display:block; }
     section > article header img { height:22.8vw; width:22.8vw; max-width:342px; }
