--- a/css/plan.css
+++ b/css/plan.css
@@ -70,6 +70,7 @@ section article { display:inline-block; text-align:left; vertical-align:top; }
 section article header { text-align:center; }
 section article header img { vertical-align:top; }
 section article h4 { text-indent:35px; text-align:left; position:relative; }
+section#explore article h4 { text-align:center; }
 .hotel:not(.venue) h4, #thingstodo h4, #explore h4, #wheretoeat h4 { text-indent:30px;  }
 section article h4 span { position:relative; }
 .mapTitleStarter:before { display:inline-block; position:absolute; left:-70px; top:-2px; }
@@ -105,6 +106,7 @@ section > header img.titleImage { width:100px; margin-bottom:15px; }
 section > header p { margin:0 auto; padding-bottom:40px; }
 
 section > article { width:100%; margin-bottom:40px; }
+section#explore > article { margin-bottom:0px; }
 .hotel:not(.venue) .mapTitleStarter:before, #thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before, #wheretoeat .mapTitleStarter:before { width:16px; }
 section > article header { margin:0; }
 section > article header img { display:none; }
@@ -141,7 +143,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     nav.secondary li { display:inline-block; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
-    article, section.list > section p { max-width:450px; }
+    article, section.list > section p { max-width:475px; }
     footer span:not(:last-of-type) { margin-right:20px; }
     footer span:not(:last-of-type):after { left:10px; }
     /* Animation */
@@ -181,6 +183,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     section > article { width:calc(33.33% - 60px); }
     section > article:not(:nth-of-type(3n)) { margin-right:30px; }
+    section#explore article h4 { text-align:left; }
     section.list > section p { max-width:620px; }
     section > article hr { display:block; }
     section > article header img { height:22.8vw; width:22.8vw; max-width:342px; }
