--- a/css/plan.css
+++ b/css/plan.css
@@ -143,7 +143,8 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     nav.secondary li { display:inline-block; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
-    article, section.list > section p { max-width:475px; }
+    article, section.list > section p { max-width:400px; }
+    article { margin-left:36px; margin-right:36px;  }
     footer span:not(:last-of-type) { margin-right:20px; }
     footer span:not(:last-of-type):after { left:10px; }
     /* Animation */
@@ -182,6 +183,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     section > article { width:calc(33.33% - 60px); }
+    section > article { margin-left:0px; margin-right:0px; }
     section > article:not(:nth-of-type(3n)) { margin-right:30px; }
     section#explore article h4 { text-align:left; }
     section.list > section p { max-width:620px; }
