--- a/css/plan.css
+++ b/css/plan.css
@@ -30,6 +30,7 @@ hr { border:none; height:1px; margin:0 auto; padding:0; }
 .mobileOnly { display:block; }
 .nobreak { white-space:nowrap; }
 footer p { margin:0; padding:0; }
+.jumpToPoint { visibility:hidden; position:absolute; top:-25px; left:0px; }
 
 
 /* Typography */
@@ -60,6 +61,7 @@ header nav.primary ul li.plan { position:absolute; right:40px; top:36px; }
 nav.mobile { margin:0 auto; }
 nav.mobile label { display:inline-block; text-align:center; line-height:30px; }
 
+section { position:relative; }
 section.map { position:relative; }
 section.map iframe { z-index:0; position:relative; }
 nav.secondary ul { text-align:center; }
@@ -70,7 +72,6 @@ section article { display:inline-block; text-align:left; vertical-align:top; }
 section article header { text-align:center; }
 section article header img { vertical-align:top; }
 section article h4 { text-indent:35px; text-align:left; position:relative; }
-section#explore article h4 { text-align:center; }
 .hotel:not(.venue) h4, #thingstodo h4, #explore h4, #wheretoeat h4 { text-indent:30px;  }
 section article h4 span { position:relative; }
 .mapTitleStarter:before { display:inline-block; position:absolute; left:-70px; top:-2px; }
@@ -144,6 +145,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     article, section.list > section p { max-width:400px; }
+    #explore article { max-width:350px; }
     article { margin-left:36px; margin-right:36px;  }
     footer span:not(:last-of-type) { margin-right:20px; }
     footer span:not(:last-of-type):after { left:10px; }
