--- a/css/plan.css
+++ b/css/plan.css
@@ -51,7 +51,7 @@ nav.mobile .view:not(:checked) + label { color:#1B468D; background:white; }
 footer { background:#F1F1F1; -webkit-box-shadow: 0px 4px 30px black; -moz-box-shadow: 0px 4px 30px black; box-shadow: 0px 4px 30px black; }
 footer.showExtendedFooter { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
 hr { background-color:#1B468D; }
-section.list > section hr.mobileOnly { background-color:#CBCBCB; color:#CBCBCB; }
+section.list > hr, section.list > section hr.mobileOnly { background-color:#CBCBCB; }
 
 
 /* Position */
@@ -77,7 +77,7 @@ section article h4 span { position:relative; }
 .mapTitleStarter:before { display:inline-block; position:absolute; left:-70px; top:-2px; }
 .hotel:not(.venue) .mapTitleStarter:before, #thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before, #wheretoeat .mapTitleStarter:before { left:-60px; }
 
-footer { position:fixed; left:0; bottom:-190px; text-align:center; z-index:10; }
+footer { position:fixed; left:0; bottom:-140px; text-align:center; z-index:10; }
 footer.showExtendedFooter { position:relative; left:0; bottom:0; }
 footer .content { position:relative; left:0px; }
 footer .content span:not(:last-of-type):after { position:relative; left:5px; top:0; }
@@ -119,7 +119,7 @@ section > article p { margin:0 0 10px 0; }
 section > article p:last-of-type { margin:0; }
 section > article p.contact { margin-top:10px;  }
 section.list > section > hr.mobileOnly { margin:0 auto 40px auto; }
-footer { width:100%; height:220px; line-height:30px; -moz-font-feature-settings:'lnum' 1; -ms-font-feature-settings:'lnum' 1; -o-font-feature-settings:'lnum' 1; -webkit-font-feature-settings:'lnum' 1; font-feature-settings:'lnum' 1; }
+footer { width:100%; height:170px; line-height:30px; -moz-font-feature-settings:'lnum' 1; -ms-font-feature-settings:'lnum' 1; -o-font-feature-settings:'lnum' 1; -webkit-font-feature-settings:'lnum' 1; font-feature-settings:'lnum' 1; }
 footer .extendedFooter { margin-top:20px; }
 footer .content span:not(:last-of-type) { vertical-align:middle; margin-right:10px; }
 
@@ -145,8 +145,8 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     article, section.list > section p { max-width:400px; }
-    #explore article { max-width:350px; }
     article { margin-left:36px; margin-right:36px;  }
+    #explore article { max-width:380px; margin-left:50px; margin-right:50px; }
     footer span:not(:last-of-type) { margin-right:20px; }
     footer span:not(:last-of-type):after { left:10px; }
     /* Animation */
@@ -156,7 +156,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     /* Typography */
     .typ-littleTitle { font-size:15px; }
     /* Position */
-    footer { bottom:-170px; }
+    footer { bottom:-140px; }
     footer header { height:51px; padding-top:10px; }
     /* Size */
     body > header, main > section:not(.map), body > footer .content { margin-left:40px; margin-right:40px; }
@@ -164,7 +164,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     section > header img.titleImage { width:170px; }
     section > header img.titleImage { margin-bottom:30px; }
     section > article header img { display:inline-block; width:296px; height:296px; margin-bottom:30px; }
-    footer { height:220px; }
+    footer { height:190px; }
     /* Animation */
 }
 @media (min-width:768px) {
@@ -185,7 +185,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     section > article { width:calc(33.33% - 60px); }
-    section > article { margin-left:0px; margin-right:0px; }
+    section > article, section#explore article { margin-left:0px; margin-right:0px; }
     section > article:not(:nth-of-type(3n)) { margin-right:30px; }
     section#explore article h4 { text-align:left; }
     section.list > section p { max-width:620px; }
