--- a/css/plan.css
+++ b/css/plan.css
@@ -69,6 +69,7 @@ section.map iframe { z-index:0; position:relative; }
 nav.secondary ul { text-align:center; }
 nav.secondary li { display:block; }
 
+main { position:relative;  }
 section { text-align:center; }
 section article { display:inline-block; text-align:left; vertical-align:top; }
 section article header { text-align:center; }
@@ -84,9 +85,7 @@ footer .content { position:relative; left:0px; }
 footer .content span:not(:last-of-type):after { position:relative; left:5px; top:0; }
 
 /* Size */
-body {
-    padding-bottom:200px;
-}
+body { padding-bottom:270px; }
 h2 { margin-bottom:20px; }
 hr { width:170px; }
 body > header { padding-top:20px; padding-bottom:20px; }
@@ -156,6 +155,9 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     footer span:not(:last-of-type):after { left:10px; }
     /* Animation */
 }
+@media (min-width:550px) {
+    body { padding-bottom:250px; }
+}
 @media (min-width:600px) {
     /* Reset */
     /* Typography */
@@ -172,6 +174,9 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     footer { bottom:-150px; }
     footer header { line-height:50px; }
     /* Animation */
+}
+@media (min-width:610px) {
+    body { padding-bottom:240px; }
 }
 @media (min-width:768px) {
     /* Reset */
