--- a/css/plan.css
+++ b/css/plan.css
@@ -28,6 +28,7 @@ iframe { border:none; }
 hr { border:none; height:1px; margin:0 auto; padding:0; }
 .mobileHide { display:none; }
 .mobileOnly { display:block; }
+.mobileOnly.imageOnly { display:none; }
 .nobreak { white-space:nowrap; }
 footer p { margin:0; padding:0; }
 .jumpToPoint { visibility:hidden; position:absolute; top:-25px; left:0px; }
@@ -109,9 +110,8 @@ section > header hr { margin-bottom:50px; }
 section > header img.titleImage { width:100px; margin-bottom:15px; }
 section > header p { margin:0 auto; padding-bottom:40px; }
 
-section > article { width:100%; margin-bottom:40px; }
+section > article { width:100%; margin-bottom:60px; }
 section#explore > article { margin-bottom:0px; }
-section#wheretostay > article { max-width:300px; }
 .hotel:not(.venue) .mapTitleStarter:before, #thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before, #wheretoeat .mapTitleStarter:before { width:16px; }
 section > article header { margin:0; }
 section > article header img { display:none; }
@@ -160,6 +160,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
 }
 @media (min-width:600px) {
     /* Reset */
+    .mobileOnly.imageOnly { display:block; }
     /* Typography */
     .typ-littleTitle { font-size:15px; }
     /* Position */
@@ -169,9 +170,8 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     header nav.primary ul li.plan { right:40px; }
     header nav.primary ul li.plan a { padding-bottom:8px; }
     h2 { margin-bottom:30px;  }
-    section > header img.titleImage { width:170px; }
-    section > header img.titleImage { margin-bottom:30px; }
-    section > article header img { display:inline-block; width:296px; height:296px; margin-bottom:30px; }
+    section > header img.titleImage { width:170px; margin-bottom:30px; }
+    section > article header img { display:inline-block; margin-bottom:30px; width:296px; }
     footer { bottom:-150px; }
     footer header { line-height:50px; margin-bottom:25px; }
     /* Animation */
@@ -190,12 +190,13 @@ footer .content span:not(:last-of-type):after { content:"·"; }
 @media (min-width:1024px) {
     /* Reset */
     .mobileHide { display:block; }
-    .mobileOnly { display:none; }
+    .mobileOnly, .mobileOnly.imageOnly { display:none; }
     /* Typography */
     /* Position */
     nav.mobile { display:none; }
     /* Size */
-    section > article { width:calc(33.33% - 10px); }
+    body > header, main > section:not(.map) { width:92%; margin-left:4vw; margin-right:4vw; }
+    section > article { width:calc(33.33% - 20px); margin-bottom:40px; }
     section > article, section#explore article { margin-left:0px; margin-right:0px; }
     section > article:not(:nth-of-type(3n)) { margin-right:30px; }
     section#explore article h4 { text-align:left; }
