--- a/css/plan.css
+++ b/css/plan.css
@@ -39,7 +39,7 @@ footer p { margin:0; padding:0; }
 .typ-littleTitle { letter-spacing:1.3px; }
 .typ-categoryTitle { font-size:15px; font-weight:normal; text-transform:uppercase; font-family:"neutra-bold"; letter-spacing:1px; }
 .typ-categoryTitle { letter-spacing:1.3px; }
-.typ-body { font-weight:normal;text-transform:none;  font-family:"garamond-premier-pro-caption"; font-size:20px; line-height:25px; margin-bottom:10px; }
+.typ-body { font-weight:normal;text-transform:none;  font-family:"garamond-premier-pro-caption"; font-size:20px; line-height:25px; margin-bottom:10px; -moz-font-feature-settings:'onum' 1; -ms-font-feature-settings:'onum' 1; -o-font-feature-settings:'onum' 1; -webkit-font-feature-settings:'onum' 1; font-feature-settings:'onum' 1; }
 .typ-subsection-header { font-weight:normal; font-family:"garamond-premier-pro-caption"; font-size:24px; line-height:30px; margin-bottom:20px; }
 .typ-title { font-weight:normal; font-family:"hera-bold"; font-size:30px; line-height:40px; letter-spacing:1px; text-transform:uppercase; -webkit-text-stroke-width:1px; text-stroke-width:1px; }
 
